# skills-manager

./: .gitignore  Cargo.toml  README.md
apps/desktop/: index.html  package-lock.json  package.json
apps/desktop/src/: constants.js  desktop-api.js  events.js  format.js  main.js  styles.css  view-model.js
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: commands.rs  main.rs  tray.rs
apps/desktop/src/views/: panel.js  settings.js
crates/skills-manager-cli/: Cargo.toml
crates/skills-manager-cli/src/: args.rs  help.rs  main.rs  output.rs  time.rs  util.rs
crates/skills-manager-cli/src/commands/: config.rs  general.rs  mod.rs  remote.rs
crates/skills-manager-core/: Cargo.toml
crates/skills-manager-core/src/: agents.rs  cache.rs  config.rs  detect.rs  error.rs  hook.rs  lib.rs  model.rs  opencode.rs  paths.rs  reconcile.rs  remote_link.rs  repository.rs  scan.rs  status.rs  sync.rs
doc/: dev-status.md  requirements.md
doc/requirements/: 01-goals.md  02-state-model.md  03-implementation-contract.md  04-constraints.md  05-conflict-handling.md  06-architecture-and-scope.md
scripts/: check.sh  cli.sh  dev-desktop.sh  smoke.sh
