[package]
name = "skills-manager-desktop"
version = "0.1.0"
edition = "2021"
license = "MIT"

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.8.5", features = ["tray-icon"] }
skills-manager-core = { path = "../../../crates/skills-manager-core" }

[workspace]
